--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -13,13 +13,13 @@
         android:title="@string/search" />
 
     <item
-        android:id="@+id/settingsFragment"
+        android:id="@+id/addFragment"
         android:checked="true"
         android:icon="@drawable/baseline_add_24"
         android:title="@string/add" />
 
     <item
-        android:id="@+id/notificationsFragment"
+        android:id="@+id/favoriteFragment"
         android:checked="true"
         android:icon="@drawable/baseline_favorite_24"
         android:title="@string/favorite" />
