--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             app:layout_constraintTop_toBottomOf="@id/iv_cover"
-            android:background="@color/devider"/>
+            android:background="@color/divider"/>
 
         <TextView
             android:id="@+id/tv_title"
@@ -45,7 +45,6 @@
             android:layout_marginTop="12dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
