--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="8dp"
     android:background="@color/white"
     android:foreground="?selectableItemBackground"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,11 +18,11 @@
         <ImageView
             android:id="@+id/iv_image"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="16:9"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="12dp"
             app:layout_constraintEnd_toEndOf="@id/tv_desc"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_desc"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/divider"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +54,10 @@
             android:id="@+id/tv_desc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="12dp"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_image"
+            app:layout_constraintBottom_toTopOf="@id/iv_image"
             app:layout_constraintEnd_toEndOf="@id/tv_title"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/divider"
