add fixed SearchFragment, adapter, holder & comment MainFragment

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,29 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph.xml"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/searchFragment">
 
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.itis.summerproject23.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_searchFragment"
-            app:destination="@id/searchFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
-        <action
-            android:id="@+id/action_mainFragment_self"
-            app:destination="@id/mainFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_favoriteFragment"
-            app:destination="@id/favoriteFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_addFragment"
-            app:destination="@id/addFragment" />
-    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.itis.summerproject23.SearchFragment"
@@ -43,9 +22,6 @@
         <action
             android:id="@+id/action_searchFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment" />
-        <action
-            android:id="@+id/action_searchFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
@@ -58,9 +34,6 @@
         <action
             android:id="@+id/action_favoriteFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
-        <action
-            android:id="@+id/action_favoriteFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
         <action
             android:id="@+id/action_favoriteFragment_to_addFragment"
             app:destination="@id/addFragment" />
@@ -80,9 +53,6 @@
             android:id="@+id/action_addFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
         <action
-            android:id="@+id/action_addFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-        <action
             android:id="@+id/action_addFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment" />
         <action
@@ -100,9 +70,6 @@
         <action
             android:id="@+id/action_profileFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
-        <action
-            android:id="@+id/action_profileFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
         <action
             android:id="@+id/action_profileFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment" />
