--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/mainFragment"
-        android:icon="@drawable/baseline_home_24"
-        android:title="@string/main" />
+<!--    <item-->
+<!--        android:id="@+id/mainFragment"-->
+<!--        android:icon="@drawable/baseline_home_24"-->
+<!--        android:title="@string/main" />-->
 
     <item
         android:id="@+id/searchFragment"
