add Light Theme, Profile and Search layout

--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -9,7 +9,7 @@
     android:layout_marginBottom="12dp"
     android:background="?selectableItemBackground"
     app:cardCornerRadius="24dp"
-    app:cardElevation="1dp">
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,18 +19,13 @@
             android:id="@+id/iv_cover"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bg_rounded_shape"
-            android:clipToOutline="true"
-            android:foregroundTint="@color/white"
             android:scaleType="centerCrop"
-            android:elevation="1dp"
             app:layout_constraintBottom_toTopOf="@id/tv_title"
             app:layout_constraintDimensionRatio="16:11"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/food"
-            tools:targetApi="s" />
+            tools:src="@drawable/food" />
 
 
         <TextView
