--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,27 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
 
+    <Button
+        android:id="@+id/btn_sing_in"
+        android:layout_width="284dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/md_theme_light_secondaryContainer"
+        android:text="@string/sign_in"
+        android:textColor="@color/nd_theme_light_button_text"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="Button"
+        android:layout_width="284dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="192dp"
+        android:backgroundTint="@color/md_theme_light_secondaryContainer"
+        android:text="@string/sign_up"
+        android:textColor="@color/nd_theme_light_button_text"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_account" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/iv_account"
-        android:layout_width="292dp"
-        android:layout_height="292dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:src="@drawable/baseline_account_circle_24"
+        app:layout_constraintBottom_toTopOf="@+id/btn_sing_in"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.242"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.682"
+        app:tint="#C1C1C1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
