--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/md_theme_light_bottom_menu_background"
         app:cardCornerRadius="36dp"
+        app:cardElevation="0dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toTopOf="@id/rv_recipe"
         app:layout_constraintEnd_toEndOf="parent"
