--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,24 +9,28 @@
         android:id="@+id/materialCardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="12dp"
+        app:cardBackgroundColor="@color/md_theme_light_bottom_menu_background"
+        app:cardCornerRadius="36dp"
+        app:cardElevation="0dp"
         app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toTopOf="@id/rv_recipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <androidx.appcompat.widget.SearchView
             android:id="@+id/sv_recipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_height="44dp"
+            android:layout_marginBottom="0dp"
+            android:background="@color/md_theme_light_search_background"
+            app:iconifiedByDefault="false"
             app:layout_constraintBottom_toTopOf="@+id/rv_recipe"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:iconifiedByDefault="false"
-            app:queryHint="Search here ..."/>
+            app:queryHint="@string/hint_search" />
     </com.google.android.material.card.MaterialCardView>
 
     <androidx.recyclerview.widget.RecyclerView
