--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -1,50 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="8dp"
-    android:background="?selectableItemBackground"
     android:layout_marginTop="8dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginBottom="12dp"
+    android:background="?selectableItemBackground"
+    app:cardCornerRadius="24dp"
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/iv_cover"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:id="@+id/iv_cover"
-            tools:src="@drawable/food"
             android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="16:9"
+            app:layout_constraintBottom_toTopOf="@id/tv_title"
+            app:layout_constraintDimensionRatio="16:11"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/food" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_cover"
-            android:background="@color/divider"/>
 
         <TextView
             android:id="@+id/tv_title"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
             android:textSize="16sp"
-            tools:text="@string/text_name"
-            android:fontFamily="@font/roboto_condensed_bold"
-            android:layout_marginHorizontal="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/divider"
-            android:textAllCaps="true"
-            android:layout_marginTop="12dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cover"
+            tools:text="@string/text_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
