--- a/app/src/main/res/layout/fragment_recipe_page.xml
+++ b/app/src/main/res/layout/fragment_recipe_page.xml
@@ -45,4 +45,15 @@
         android:layout_height="wrap_content"
         android:text="Button"
         tools:ignore="MissingConstraints" />
+
+    <Switch
+        android:id="@+id/add_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
