--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/action_favoriteFragment_self"
             app:destination="@id/favoriteFragment" />
+        <action
+            android:id="@+id/action_favoriteFragment_to_recipePageFragment"
+            app:destination="@id/recipePageFragment" />
     </fragment>
     <fragment
         android:id="@+id/addFragment"
