--- a/app/src/main/res/layout/fragment_recipe_page.xml
+++ b/app/src/main/res/layout/fragment_recipe_page.xml
@@ -47,7 +47,7 @@
         tools:ignore="MissingConstraints" />
 
     <Switch
-        android:id="@+id/add_favorite"
+        android:id="@+id/sw_add_to_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Switch"
