--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RegistrationFragment">
-
-    <data>
-        <variable
-            name="fragment"
-            type="com.itis.summerproject23.RegistrationFragment" />
-    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,20 +12,20 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/etUsername"
+            android:id="@+id/et_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/username" />
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/etPassword"
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -37,10 +33,10 @@
             android:minHeight="48dp" />
 
         <Button
-            android:id="@+id/btnRegister"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/register" />
 
     </LinearLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
