--- a/app/src/main/res/layout/fragment_user_account.xml
+++ b/app/src/main/res/layout/fragment_user_account.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tw_welcomeUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
