--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_text" />
 
     <Button
-        android:id="@+id/btm_add"
+        android:id="@+id/btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add"
