--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
 
 
     <Button
-        android:id="@+id/btn_sign_up"
+        android:id="@+id/btn_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
