--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -25,7 +25,7 @@
         android:title="@string/favorite" />
 
     <item
-        android:id="@+id/userAcoountFragment"
+        android:id="@+id/userAccountFragment"
         android:icon="@drawable/baseline_person_24"
         android:title="@string/profile" />
 
