--- a/app/src/main/res/layout/fragment_recipe_page.xml
+++ b/app/src/main/res/layout/fragment_recipe_page.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:backgroundTint="@color/white"
         android:src="@drawable/baseline_chevron_left_24"
+        android:foregroundTint="@color/md_theme_light_onPrimaryContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -25,7 +26,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:button="@drawable/cb_is_favorite"
-        android:foregroundTint="#DFDFDF"
+        android:foregroundTint="@color/md_theme_light_onPrimaryContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btn_delete"
         app:layout_constraintHorizontal_bias="0.931"
@@ -39,6 +40,7 @@
         android:layout_height="32dp"
         android:backgroundTint="@color/white"
         android:src="@drawable/baseline_delete_outline_24"
+        android:foregroundTint="@color/md_theme_light_onPrimaryContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.946"
