--- a/app/src/main/res/layout-v31/item_recipe.xml
+++ b/app/src/main/res/layout-v31/item_recipe.xml
@@ -29,8 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/food"
-            tools:targetApi="s" />
+            tools:src="@drawable/food" />
 
 
 
