--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_profileFragment_to_registrationFragment"
             app:destination="@id/registrationFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_userAcoountFragment"
+            app:destination="@id/userAcoountFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -23,7 +26,7 @@
     </fragment>
     <fragment
         android:id="@+id/userAcoountFragment"
-        android:name="com.itis.summerproject23.UserAccountFragment"
+        android:name="com.itis.summerproject23.UserAcoountFragment"
         android:label="UserAcoountFragment" />
     <fragment
         android:id="@+id/searchFragment"
