--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -36,6 +36,7 @@
             android:background="@drawable/bg_edit_text"
             android:paddingStart="20dp"
             android:hint="@string/username"
+            android:inputType="textCapSentences"
             app:layout_constraintBottom_toTopOf="@id/et_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
             android:background="@drawable/bg_edit_text"
             android:hint="@string/email"
             android:paddingStart="20dp"
+            android:inputType="textEmailAddress"
             app:layout_constraintBottom_toTopOf="@id/et_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
