--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -27,6 +27,7 @@
                 android:background="@drawable/bg_edit_text"
                 android:paddingStart="20dp"
                 android:hint="@string/name"
+                android:inputType="textCapSentences"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,6 +42,7 @@
                 android:background="@drawable/bg_edit_text"
                 android:paddingStart="20dp"
                 android:hint="@string/ingredients"
+                android:inputType="textCapSentences|textMultiLine"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_name"
@@ -55,6 +57,7 @@
                 android:background="@drawable/bg_edit_text"
                 android:paddingStart="20dp"
                 android:hint="@string/description"
+                android:inputType="textCapSentences|textMultiLine"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_ingredients"
